--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
 </head>
 
 <body>
-    <h1>
-        <snap class="orange-color"></snap>Skip The Diet!
-    </h1>
+    <section>
+        <div class="half-width">
+            <h1>
+                <span class="orange-color">Skip</span> The Diet!
+            </h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network!</h1>
+            <p>Imaging You don't need a Died.<br> Beacuse we provide healthy and Delicious Food!</p>
+            <a class="link-button" target="_blank" href="https://www.google.com/">Order Now</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+
+    </section>
 </body>
 
 </html>
