--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
         </div>
 
     </section>
+    <section class="shapes">
+
+        <div class="half-width">
+
+            <img src="images/IMG20210514173339-removebg-preview__7_-removebg-preview (1) (1).png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>My name is naima jhum.I am 21 years old.<br>I study in honours.I am a Android Developer,<br>but I like
+                Web Developer.</p>
+            <a class="link-button" target="_self" href="https://www.google.com/">Contact Me</a>
+
+        </div>
+    </section>
+
+    </section>
 </body>
 
 </html>
