--- a/index.html
+++ b/index.html
@@ -39,9 +39,87 @@
             <h2>About Me</h2>
             <p>My name is naima jhum.I am 21 years old.<br>I study in honours.I am a Android Developer,<br>but I like
                 Web Developer.</p>
-            <a class="link-button" target="_self" href="https://www.google.com/">Contact Me</a>
+            <a class="link-button" target="_blank" href="https://www.google.com/">Contact Me</a>
 
         </div>
+        <section class="Recipies-area">
+            <div class="flexible-container">
+                <div class="Recipies-item">
+
+                </div>
+
+            </div>
+            <h1>My Recipies</h1>
+            <div class="Recipies-item">
+                <p>THE FOOD NETWORK'S cooking app gets hyped as "The Peloton of Food," like it's being pitched to a
+                <div class="Recipies-item">
+                    <img src="images/food/Project Cover1.jpg" alt="">
+                    <p>Salad recipes are my favorite way to showcase vibrant, in-season produce – fruits and veggies
+                        that are so good on their own that you don’t need to do much to make them into a delicious
+                        meal. On cold winter nights, I like to brighten up our dinner table with a big, colorful mix
+                        of root veggies and hearty greens. On beautiful, warm days when I’d rather be outside than
+                        in the kitchen, summer salads are the perfect solution: they’re simple to toss together, but
+                        they’re totally delicious nonetheless.
+
+                    </p>
+                </div>
+                <div>
+                    <img src="images/food/Project Cover5.png" alt="">
+                    <p>Salad recipes are my favorite way to showcase vibrant, in-season produce – fruits and veggies
+                        that are so good on their own that you don’t need to do much to make them into a delicious
+                        m </p>
+                </div>
+                eal. On cold winter nights, I like to brighten up our dinner table with a big, colorful mix
+                of root veggies and hearty greens. On beautiful, warm days when I’d rather be outside than
+                in the kitchen, summer salads are the perfect solution: they’re simple to toss together, but
+                they’re totally delicious nonetheless.
+
+
+
+
+
+            </div>
+            </div>
+            <div class="Recipies-item">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <p>Salad recipes are my favorite way to showcase vibrant, in-season produce – fruits and veggies
+                    that are so good on their own that you don’t need to do much to make them into a delicious
+                    meal. On cold winter nights, I like to brighten up our dinner table with a big, colorful mix
+                    of root veggies and hearty greens. On beautiful, warm days when I’d rather be outside than
+                    in the kitchen, summer salads are the perfect solution: they’re simple to toss together, but
+                    they’re totally delicious nonetheless.
+
+                </p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover5.png" alt="">
+                <p>Salad recipes are my favorite way to showcase vibrant, in-season produce – fruits and veggies
+                    that are so good on their own that you don’t need to do much to make them into a delicious
+                    m </p>
+            </div>
+            eal. On cold winter nights, I like to brighten up our dinner table with a big, colorful mix
+            of root veggies and hearty greens. On beautiful, warm days when I’d rather be outside than
+            in the kitchen, summer salads are the perfect solution: they’re simple to toss together, but
+            they’re totally delicious nonetheless.
+
+
+
+
+
+            </div>
+            </div> centure capital firm. Dubbed the Food Network Kitchen, the app is available on iOS, Android, and
+            Amazon devices, and it offers a growing host of content featuring scads of Food Network stars who
+            are so famous you only need their first names—Alton! Bobby! Giada! Ina! Martha! Rachael!</p>
+            <div class="half-width">
+                <img src="images/food/Project Cover.png" alt="">
+                <p>The Chaco along its western and northern limits is a land of rich soil and ample, if seasonal,
+                    rainfall. Its complex topography creates endless micro climates, where a vast number of crops,
+                    including peaches, oranges, manioc, sugar cane, apples, bananas, potatoes, and “maní” – peanuts
+                    – flourish.</p>
+        </section>
+
+
+    </section>
     </section>
 
     </section>
